# sonda

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/sonda-cli/: Cargo.toml
crates/sonda-cli/src/: main.rs
crates/sonda-cli/src/commands/: classify.rs  mod.rs  parse.rs  rules.rs
crates/sonda-cli/src/output/: json.rs  table.rs
crates/sonda-core/: Cargo.toml
crates/sonda-core/src/: error.rs  lib.rs  model.rs  trace.rs
crates/sonda-core/src/classify/: engine.rs  hp_engine.rs  mod.rs  outcome.rs
crates/sonda-core/src/clp/: database.rs  mod.rs  schema.rs  speciation.rs
crates/sonda-core/src/extraction/: mod.rs  pdftotext.rs  sweco_xlsx.rs  table.rs
crates/sonda-core/src/parsing/: header.rs  mod.rs  normalize.rs  values.rs
crates/sonda-core/src/rules/: builtin.rs  mod.rs  schema.rs
crates/sonda-core/tests/: integration.rs
docs/: pipeline.md
docs/research/: avfallsforordningen.md  clp-substance-database.md  hp-criteria.md  ifa-acceptanskriterier.md  nv-riktvarden.md  pdf-extraction.md  waste-matrices.md
rules/: asfalt-pah16.json  clp-substances.json  nv-riktvarden.json  speciation-assumptions.json
tools/bbox-viewer/: index.html  main.js  styles.css
