[package]
name = "sonda-core"
version = "0.1.0"
edition = "2021"
description = "Waste classification engine for contaminated soil and asphalt"

[dependencies]
rust_decimal = { version = "1", features = ["serde-str"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"

[dev-dependencies]
rust_decimal_macros = "1"
